--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ authors:
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    description: "Author at Health Tech Bytes. Cloud Architect, data science and ML practitioner"
   john:
     name: John
     display_name: John    
