--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ authors:
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: "Author at Health Tech Bytes. Cloud Architect, data science and ML practitioner, health tech enthusiast"
+    description: "Author at Health Tech Bytes. Cloud Architect, data science and ML practitioner, health informatics enthusiast"
   john:
     name: John
     display_name: John    
