--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ authors:
   sandy:
     name: Sandy
     display_name: Sandy
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    gravatar: sandylsu@gmail.com
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
