--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ permalink: /:title/
 # Authors
 authors:
   sandy:
-    name: Sandy
-    display_name: Sandy
+    name: Sal
+    display_name: Sal
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
