--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ email: sandylsu@gmail.com
 medium: https://medium.com/@sandylsu
 twitter: https://twitter.com/sandylsu
 linkedin: https://www.linkedin.com/in/sandylsu/
+github: https://github.com/slsu0424
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
