--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ authors:
     email: sandylsu@gmail.com
     web: https://medium.com/@sandylsu
     twitter: https://twitter.com/sandylsu
-    description: "Author at Health Tech Bytes. Cloud Architect, data science and AI practitioner, healthcare informatics enthusiast"
+    description: "Author at Health Tech Bytes. Cloud Architect, data science and AI practitioner, health informatics enthusiast"
   john:
     name: John
     display_name: John    
