--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Health Tech Bytes"
 description: "Where health and technology meet, one byte at a time."
 email: sandylsu@gmail.com
 medium: https://medium.com/@sandylsu
-twitter: https://twitter.com/
+twitter: https://twitter.com/sandylsu
 linkedin: https://www.linkedin.com/in/sandylsu/
 github: https://github.com/slsu0424
 logo: 'assets/images/logo.png'
