--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ medium: https://medium.com/@sandylsu
 twitter: https://twitter.com/sandylsu
 linkedin: https://www.linkedin.com/in/sandylsu/
 github: https://github.com/slsu0424
-# logo: 'assets/images/logo.png'
-# favicon: 'assets/images/logo.png'
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/logo.png'
 baseurl:
 #google_analytics: 'UA-46278016-1'
 google_analytics: 'G-Q7BBEPH7PT'
