--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,8 @@ jekyll-archives:
     
 # Pagination 
 paginate: 6
-paginate_path: /page:num/
+#paginate_path: /page:num/
+paginate_path: /blog/page:num/
     
 # Other
 markdown: kramdown
