--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ jekyll-archives:
 # Pagination 
 paginate: 6
 #paginate_path: /page:num/
-paginate_path: /blog/page:num
+paginate_path: /blog/page:num/
     
 # Other
 markdown: kramdown
