--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: "Health Tech Bytes"
+name: "Sandy Su"
 title: "Health Tech Bytes"
 description: "Where health and technology meet, one byte at a time."
 email: sandylsu@gmail.com
@@ -16,7 +16,7 @@ disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
-owner: "Sandy Su"
+#owner: "Sandy Su"
 
 # Authors
 authors:
