--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: "Sandy Su"
+name: "Sandy S"
 title: "Health Tech Bytes"
 description: "Where health and technology meet, one byte at a time."
 email: sandylsu@gmail.com
