--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
-  # - jekyll-last-modified-a
+  # - jekyll-last-modified-at
     
 # Archives
 jekyll-archives:
