--- a/_configOld.yml
+++ b/_configOld.yml
@@ -46,7 +46,8 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
-
+  # - jekyll-last-modified-at
+    
 # Archives
 jekyll-archives:
   enabled:
