--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ authors:
     web: https://www.linkedin.com/in/sandylsu/
     # web: https://medium.com/@sandylsu
     twitter: https://twitter.com/sandylsu
-    description: "Author at Health Tech Bytes. Cloud Architect, data science and AI practitioner, health informatics strategist"
+    description: "Author at Health Tech Bytes. Cloud Architect, data science and AI practitioner, health technology advisor"
   john:
     name: John
     display_name: John    
